# NeuralNetwork

./: .cproject  .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: main.cpp  neural_net.h  trainer.h
